--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Roboto:wght@300;400;700;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Nobile:wght@400;500&display=swap"
     rel="stylesheet">
   <title>Mav Seneris</title>
 </head>
